S2D Changelog File.
In this file you can find the changes made to every version of the library.

06/2025
v_0.1.5-SNAPSHOT:
- changed load and loadRaw to use STB instead of SDL2_Image.
- added unload function to Images.scala, necessary to free images.
- added loadAnim, loadAnimFromMemory functions to Images.scala.
- added loadFromMemory function to Images.scala.

v_0.1.4-SNAPSHOT:
- Refactored the entire structure of the project
- added stb bindings.

v_0.1.3-SNAPSHOT:
- Added new SDL_Image and SDL_ImageExtras files.
- Updated project.scala file.

v_0.1.2-SNAPSHOT:
- Finished core package migration (Cursor, Window & Drawing)
- Finished shapes package migration (Setup & Basics)
- Started textures package migration.
- Updated readme information with scala native configurations.
- Renamed gl/Extras.scala to gl/GLExtras.scala.
- Added Code of Conduct file.
- Switched from IntelliJ to Focus. Added build.bat to run with Wezterm.

v_1.0.1:
- Started the migration of the backend from Scala JVM to Scala Native.
- Added core module with Window, Cursor and Drawing classes.
- Added empty shapes and textures packages.
- Added types package with BlendMode, Camera2D, Color, Image, RenderTexture2D, Shader, Texture2D, Vector2, WindowFlag classes.
- Added sdl2 package with SDL2 bindings for Scala Native.
- Added gl package with OpenGL bindings for Scala Native.
- Switched from sbt to Scala-CLI for the main building system.
- Re-added Readme, LICENSE, changelog and library expansion files to the repository.
- Setup ScalaFMT for code formatting.

v_1.0.0:
- Refactored the structure of the library, the usage is now "ClassName.functionName"
- Support for basic window management (create, close, fullscreen, focus, etc)
- Support for 2D shapes rendering (rectangles, triangles, circles, etc)
- Support for image loading and texture rendering.
- Basic 2D camera system with zoom, rotation and offset.
- Current Packages:
 -- Core Package
    S2D.core.Window
    S2D.core.Cursor